sorta fixed height overflow

--- a/js/RockPaperScissors/style.css
+++ b/js/RockPaperScissors/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(150, 210, 248);
-  font-size: 28px;
+  font-size: 24px;
 }
 
 
@@ -31,14 +31,11 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  margin-top: 20px;
   height: 35vh;
 }
 
 #game-over {
-  font-size: 16px;
-  height: 16px;
+  font-size: 0px;
 }
 
 #third-row {
